--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -24,10 +24,14 @@
     <!-- ----SECTION DE RECHERCHE--- -->
     <!-- --------------------------- -->
     <section id="search-section">
-        <label for="column-selection">Rechercher par :</label>
-        <select name="column-selection" id="column-selection"></select>
-        <label for="searchbar">Valeur :</label> 
-        <input id="searchbar" type="text" name="searchbar" placeholder="Search..">
+        <fieldset>
+            <label for="column-selection">Rechercher par :</label>
+            <select name="column-selection" id="column-selection"></select>
+        </fieldset>
+        <fieldset>
+            <label for="searchbar">Valeur :</label> 
+            <input id="searchbar" type="text" name="searchbar" placeholder="Search..">
+        </fieldset>
     </section>
 
     <!-- ------------------------------ -->
