--- a/views/guest/_navlist.phtml
+++ b/views/guest/_navlist.phtml
@@ -1,5 +1,7 @@
-<ul class="navlist">
-    <li><a href="index.php?route=homepage">Page d'accueil</a></li>
-    <li><a href="index.php?route=login">Se connecter</a></li>
-    <li><a href="index.php?route=register">Créer un compte</a></li>
-</ul>
+<nav class="nav">
+    <ul class="navlist">
+        <li><a href="index.php?route=homepage">Page d'accueil</a></li>
+        <li><a href="index.php?route=login">Se connecter</a></li>
+        <li><a href="index.php?route=register">Créer un compte</a></li>
+    </ul>
+</nav>
