--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,1 +1,13 @@
-<h1>Homepage</h1>
+<main class="container">
+    <h1>Homepage</h1>
+    <div class="background">
+        <span id="tagline">
+            KodingCore, when your dreams are taking shape
+        </span>
+        <span id="presentation">
+            La passion pour la technologie et un engagement fort dans les domaines de l'informatique
+            sont à la base de la création de "KodingCore Development" avec un objectif clair : fournir aux
+            professionnels des solutions de Développement web et logiciel innovantes et sur mesure.
+        </span>
+    </div>
+</main>
