--- a/views/user/_navlist.phtml
+++ b/views/user/_navlist.phtml
@@ -1,7 +1,9 @@
-<ul class="navlist">
-    <li><a href="index.php?route=homepage">Page d'accueil</a></li>
-    <li><a href="index.php?route=shop">Vitrine</a></li>
-    <li><a href="index.php?route=account">Mon compte</a></li>
-    <li><a href="index.php?route=contact">Contactez moi</a></li>
-    <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
-</ul>
+<nav class="nav">
+    <ul class="navlist">
+        <li><a href="index.php?route=homepage">Page d'accueil</a></li>
+        <li><a href="index.php?route=shop">Vitrine</a></li>
+        <li><a href="index.php?route=account">Mon compte</a></li>
+        <li><a href="index.php?route=contact">Contactez moi</a></li>
+        <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
+    </ul>
+</nav>
