--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -17,162 +17,172 @@
 <main class="container">
     <h1>Mon compte</h1>
     <form action="index.php?route=account" method="POST" id="account_form">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
-        <span id="error_username"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "username")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
-        <span id="error_email"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "email")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" minlength="8" maxlength="50" onpaste="return false;">
-        <span id="error_password"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "password")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="confirm_password">Confirm password</label>
-        <input type="password" name="confirm_password" id="confirm_password" minlength="8" maxlength="50" onpaste="return false;">
-        <span id="error_confirm_password"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "confirm_password")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="first_name">Prénom</label>
-        <input type="text" name="first_name" id="first_name" 
-        <?php 
-            if(!$info->getFirstName())
-            {
-                echo 'placeholder="Votre prénom"';
-            }
-            else
-            {
-                echo 'value="' . $info->getFirstName() . '"';
-            }
-        ?> 
-        maxlength="50" onpaste="return false;">
-        <span id="error_first_name"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "first_name")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="last_name">Nom</label>
-        <input type="text" name="last_name" id="last_name"
-        <?php 
-            if(!$info->getLastName())
-            {
-                echo 'placeholder="Votre nom"';
-            }
-            else
-            {
-                echo 'value="' . $info->getLastName() . '"';
-            }
-        ?> 
-        maxlength="50" onpaste="return false;">
-        <span id="error_last_name"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "last_name")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="tel">Téléphone</label>
-        <input type="text" name="tel" id="tel"
-        <?php 
-            if(!$info->getTel())
-            {
-                echo 'placeholder="xxxxxxxxxx"';
-            }
-            else
-            {
-                echo 'value="' . $info->getTel() . '"';
-            }
-        ?>
-        maxlength="10" onpaste="return false;">
-        <span id="error_tel"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "tel")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="address">Address</label>
-        <input type="text" name="address" id="address"
-        <?php 
-            if(!$info->getAddress())
-            {
-                echo 'placeholder="Votre adresse"';
-            }
-            else
-            {
-                echo 'value="' . $info->getAddress() . '"';
-            }
-        ?>
-        maxlength="255" onpaste="return false;">
-        <span id="error_address"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "address")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="zip">Code Postal</label>
-        <input type="text" name="zip" id="zip"
-        <?php 
-            if(!$info->getZip())
-            {
-                echo 'placeholder="Votre code postal"';
-            }
-            else
-            {
-                echo 'value="' . $info->getZip() . '"';
-            }
-        ?>
-        maxlength="15" onpaste="return false;">
-        <span id="error_zip"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "zip")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-
-        <label for="city">Ville</label>
-        <input type="text" name="city" id="city"
-        <?php 
-            if(!$info->getCity())
-            {
-                echo 'placeholder="Votre ville"';
-            }
-            else
-            {
-                echo 'value="' . $info->getCity() . '"';
-            }
-        ?>
-        maxlength="100" onpaste="return false;">
-        <span id="error_city"><?php
-            if(isset($this->data["message"]) && $this->data["message"][1] === "city")
-            {
-                echo $this->data["message"][0];
-            }
-        ?></span>
-        
+        <fieldset>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
+            <span id="error_username"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "username")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
+            <span id="error_email"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "email")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" minlength="8" maxlength="50" onpaste="return false;">
+            <span id="error_password"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "password")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="confirm_password">Confirm password</label>
+            <input type="password" name="confirm_password" id="confirm_password" minlength="8" maxlength="50" onpaste="return false;">
+            <span id="error_confirm_password"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "confirm_password")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="first_name">Prénom</label>
+            <input type="text" name="first_name" id="first_name" 
+            <?php 
+                if(!$info->getFirstName())
+                {
+                    echo 'placeholder="Votre prénom"';
+                }
+                else
+                {
+                    echo 'value="' . $info->getFirstName() . '"';
+                }
+            ?> 
+            maxlength="50" onpaste="return false;">
+            <span id="error_first_name"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "first_name")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="last_name">Nom</label>
+            <input type="text" name="last_name" id="last_name"
+            <?php 
+                if(!$info->getLastName())
+                {
+                    echo 'placeholder="Votre nom"';
+                }
+                else
+                {
+                    echo 'value="' . $info->getLastName() . '"';
+                }
+            ?> 
+            maxlength="50" onpaste="return false;">
+            <span id="error_last_name"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "last_name")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="tel">Téléphone</label>
+            <input type="text" name="tel" id="tel"
+            <?php 
+                if(!$info->getTel())
+                {
+                    echo 'placeholder="xxxxxxxxxx"';
+                }
+                else
+                {
+                    echo 'value="' . $info->getTel() . '"';
+                }
+            ?>
+            maxlength="10" onpaste="return false;">
+            <span id="error_tel"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "tel")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="address">Address</label>
+            <input type="text" name="address" id="address"
+            <?php 
+                if(!$info->getAddress())
+                {
+                    echo 'placeholder="Votre adresse"';
+                }
+                else
+                {
+                    echo 'value="' . $info->getAddress() . '"';
+                }
+            ?>
+            maxlength="255" onpaste="return false;">
+            <span id="error_address"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "address")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="zip">Code Postal</label>
+            <input type="text" name="zip" id="zip"
+            <?php 
+                if(!$info->getZip())
+                {
+                    echo 'placeholder="Votre code postal"';
+                }
+                else
+                {
+                    echo 'value="' . $info->getZip() . '"';
+                }
+            ?>
+            maxlength="15" onpaste="return false;">
+            <span id="error_zip"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "zip")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
+        <fieldset>
+            <label for="city">Ville</label>
+            <input type="text" name="city" id="city"
+            <?php 
+                if(!$info->getCity())
+                {
+                    echo 'placeholder="Votre ville"';
+                }
+                else
+                {
+                    echo 'value="' . $info->getCity() . '"';
+                }
+            ?>
+            maxlength="100" onpaste="return false;">
+            <span id="error_city"><?php
+                if(isset($this->data["message"]) && $this->data["message"][1] === "city")
+                {
+                    echo $this->data["message"][0];
+                }
+            ?></span>
+        </fieldset>
         <input type="submit" value="Éditer mon profil">
     </form>
 </main>
