--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -10,12 +10,14 @@
 <main class="container">
     <h1>Envoyer un message à l'administrateur</h1>
     <form action="index.php?route=contact" method="POST" id="contact_form">
-        <label for="subject">Sujet</label>
-        <input type="text" name="subject" id="subject" autocomplete="off" required minlength="4" maxlength="50">
-
-        <label for="content">Message</label>
-        <textarea id="content" name="content" placeholder="Votre texte ici..." required minlength="10" maxlength="2048"></textarea>
-
+        <fieldset>
+            <label for="subject">Sujet</label>
+            <input type="text" name="subject" id="subject" autocomplete="off" required minlength="4" maxlength="50">
+        </fieldset>
+        <fieldset>
+            <label for="content">Message</label>
+            <textarea id="content" name="content" placeholder="Votre texte ici..." required minlength="10" maxlength="2048"></textarea>
+        </fieldset>
         <input type="submit" value="Envoyer">
     </form>
 </main>
