--- a/views/guest/_navlist.phtml
+++ b/views/guest/_navlist.phtml
@@ -1,7 +1,8 @@
-<nav class="nav">
-    <ul class="navlist">
-        <li><a href="index.php?route=homepage">Page d'accueil</a></li>
+<nav class="navbar">
+    <ul class="menu" id="menu">
+        <li><a href="index.php?route=homepage">Accueil</a></li>
         <li><a href="index.php?route=login">Se connecter</a></li>
         <li><a href="index.php?route=register">Créer un compte</a></li>
     </ul>
 </nav>
+<script src="assets\js\burgerMenu.js"></script>
