--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,13 +1,16 @@
-<main class="container">
-    <h1>Homepage</h1>
-    <div class="background">
-        <span id="tagline">
-            KodingCore, when your dreams are taking shape
-        </span>
-        <span id="presentation">
+<main id="container" class="container">
+    <section class="background">
+        <div id="tagline-container">
+            <p id="tagline">
+                "KodingCore, when your dreams are taking shape"
+            </p>
+        </div>
+    </section>
+    <section id="presentation">
+        <p>
             La passion pour la technologie et un engagement fort dans les domaines de l'informatique
             sont à la base de la création de "KodingCore Development" avec un objectif clair : fournir aux
             professionnels des solutions de Développement web et logiciel innovantes et sur mesure.
-        </span>
-    </div>
+        </p>
+    </section>
 </main>
