--- a/views/admin/_navlist.phtml
+++ b/views/admin/_navlist.phtml
@@ -1,6 +1,6 @@
-<nav class="nav">
-    <ul class="navlist">
-        <li><a href="index.php?route=homepage">Page d'accueil</a></li>
+<nav class="navbar">
+    <ul class="menu" id="menu">
+        <li><a href="index.php?route=homepage">Accueil</a></li>
         <li><a href="index.php?route=shop">Vitrine</a></li>
         <li><a href="index.php?route=account">Mon compte</a></li>
         <li><a href="index.php?route=dashboard">Panneau de control</a></li>
@@ -9,3 +9,4 @@
         <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
     </ul>
 </nav>
+<script src="assets\js\burgerMenu.js"></script>
