--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KodingCore Development</title>
     <link rel="icon" type="image/png" href="https://i.goopics.net/wovpgb.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/css/style.css">
+    <script src="https://kit.fontawesome.com/a2be3c71ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div id="top-header">
-            <div class="logo"></div>
+        <div class="logo">
+            <img src="assets\images\logos\logo-kodingcore-white.png" alt="Logo KodingCore Development">
+        </div>
+        <div class="burger-container">
+            <a href="#" id="burger-icon"><i class="fa-solid fa-bars fa-2x" style="color: #ffffff;"></i></a>
         </div>
         <?php
             if(isset($_SESSION["user_id"], $_SESSION["role"])) //* Control des variables de sessions pour l'acces users et admin
