--- a/views/user/_navlist.phtml
+++ b/views/user/_navlist.phtml
@@ -1,9 +1,10 @@
-<nav class="nav">
-    <ul class="navlist">
-        <li><a href="index.php?route=homepage">Page d'accueil</a></li>
+<nav class="navbar">
+    <ul class="menu" id="menu">
+        <li><a href="index.php?route=homepage">Accueil</a></li>
         <li><a href="index.php?route=shop">Vitrine</a></li>
         <li><a href="index.php?route=account">Mon compte</a></li>
         <li><a href="index.php?route=contact">Contactez moi</a></li>
         <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
     </ul>
 </nav>
+<script src="assets\js\burgerMenu.js"></script>
