--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -6,11 +6,20 @@
             </p>
         </div>
     </section>
-    <section id="presentation">
+    <section class="presentation">
         <p>
             La passion pour la technologie et un engagement fort dans les domaines de l'informatique
             sont à la base de la création de "KodingCore Development" avec un objectif clair : fournir aux
             professionnels des solutions de Développement web et logiciel innovantes et sur mesure.
         </p>
     </section>
+    <section class="news">
+
+    </section>
+    <div id="aside-access">
+        <i class="fa-solid fa-caret-right" style="color: #ffffff;"></i>
+    </div>
+    <aside class="anchor-aside">
+
+    </aside>
 </main>
