--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,25 +1,64 @@
 <main id="container" class="container">
-    <section class="background">
+    <section id="heading-section">
         <div id="tagline-container">
             <p id="tagline">
                 "KodingCore, when your dreams are taking shape"
             </p>
         </div>
     </section>
-    <section class="presentation">
+    <h1>Accueuil</h1>
+    <section id="presentation">
+        <h2>Présentation de l'entreprise</h2>
         <p>
             La passion pour la technologie et un engagement fort dans les domaines de l'informatique
             sont à la base de la création de "KodingCore Development" avec un objectif clair : fournir aux
             professionnels des solutions de Développement web et logiciel innovantes et sur mesure.
         </p>
     </section>
-    <section class="news">
+    <section id="news">
+        <h2>Nouveautés</h2>
+        <article>
+            <h3>Title</h3>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus consequuntur sapiente recusandae fugiat repellat nisi quae ab provident sit. Culpa dolorem maiores sed, porro suscipit nam itaque placeat ratione hic, architecto natus. Reprehenderit, doloremque enim! Saepe, ad, tempora, aspernatur minus harum illo maiores dolores fugiat necessitatibus quis sed provident unde!</p>
+        </article>
+        <article>
+            <h3>Title</h3>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus consequuntur sapiente recusandae fugiat repellat nisi quae ab provident sit. Culpa dolorem maiores sed, porro suscipit nam itaque placeat ratione hic, architecto natus. Reprehenderit, doloremque enim! Saepe, ad, tempora, aspernatur minus harum illo maiores dolores fugiat necessitatibus quis sed provident unde!</p>
+        </article>
+        <article>
+            <h3>Title</h3>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus consequuntur sapiente recusandae fugiat repellat nisi quae ab provident sit. Culpa dolorem maiores sed, porro suscipit nam itaque placeat ratione hic, architecto natus. Reprehenderit, doloremque enim! Saepe, ad, tempora, aspernatur minus harum illo maiores dolores fugiat necessitatibus quis sed provident unde!</p>
+        </article>
+        <article>
+            <h3>Title</h3>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus consequuntur sapiente recusandae fugiat repellat nisi quae ab provident sit. Culpa dolorem maiores sed, porro suscipit nam itaque placeat ratione hic, architecto natus. Reprehenderit, doloremque enim! Saepe, ad, tempora, aspernatur minus harum illo maiores dolores fugiat necessitatibus quis sed provident unde!</p>
+        </article>
+        <article>
+            <h3>Title</h3>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus consequuntur sapiente recusandae fugiat repellat nisi quae ab provident sit. Culpa dolorem maiores sed, porro suscipit nam itaque placeat ratione hic, architecto natus. Reprehenderit, doloremque enim! Saepe, ad, tempora, aspernatur minus harum illo maiores dolores fugiat necessitatibus quis sed provident unde!</p>
+        </article>
+        <article>
+            <h3>Title</h3>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus consequuntur sapiente recusandae fugiat repellat nisi quae ab provident sit. Culpa dolorem maiores sed, porro suscipit nam itaque placeat ratione hic, architecto natus. Reprehenderit, doloremque enim! Saepe, ad, tempora, aspernatur minus harum illo maiores dolores fugiat necessitatibus quis sed provident unde!</p>
+        </article>
+    </section>
+    <section id="reviews">
 
     </section>
     <div id="aside-access">
         <i class="fa-solid fa-caret-right" style="color: #ffffff;"></i>
     </div>
-    <aside class="anchor-aside">
-
+    <aside id="anchor-aside">
+        <ul>
+            <li><a href="#presentation">Présentation</a></li>
+            <li><a href="#news">Nouveautés</a></li>
+            <li><a href="#reviews">Avis-clients</a></li>
+        </ul>
     </aside>
 </main>
