--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -41,7 +41,6 @@ html
         position: absolute;
         height: auto;
         right: 0;
-        // top: 8%;
         text-align: center;
         #menu
         {
@@ -78,7 +77,9 @@ html
     }
     .container
     {
-      .background
+      width: 90%;
+      margin: 0 auto;
+      #heading-section
       {
         height: 33vw;
         display: flex;
@@ -101,17 +102,17 @@ html
           }
         }
       }
-      .presentation
+      #presentation
       {
 
       }
-      .news
+      #news
       {
 
       }
       #aside-access
       {
-        width: 12px;
+        width: 18px;
         height: 100px;
         position: fixed;
         display: flex;
@@ -122,7 +123,7 @@ html
         background-color: $text-color;
         border-radius: 0 5px 5px 0;
       }
-      .anchor-aside
+      #anchor-aside
       {
 
       }
