--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -8,7 +8,7 @@
     </section>
     <h1>Accueuil</h1>
     <section id="presentation">
-        <h2>Présentation de l'entreprise</h2>
+        <h2>Qui sommes nous?</h2>
         <p>
             La passion pour la technologie et un engagement fort dans les domaines de l'informatique
             sont à la base de la création de "KodingCore Development" avec un objectif clair : fournir aux
@@ -49,7 +49,7 @@
         </article>
     </section>
     <section id="reviews">
-
+        <h2>Certains avis</h2>
     </section>
     <div id="aside-access">
         <i class="fa-solid fa-caret-right" style="color: #ffffff;"></i>
