need check user role dashing

--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -1,25 +1,15 @@
 <!-- ------------------------------------------------------------------------------------- -->
-<!-- ----------------PANNEAU GAUCHE DES LIENS VERS LES TABLES DE CONTROL------------------ -->
-<!-- ------------------------------------------------------------------------------------- -->
-<aside class="left-pannel">
-    <ul>
-        <li><a href="#" id="user-link">Utilisateurs</a></li>
-        <li><a href="#" id="info-link">Infos</a></li>
-        <li><a href="#" id="message-link">Messages</a></li>
-        <li><a href="#" id="template-link">Templates</a></li>
-        <li><a href="#" id="category-link">Catégories</a></li>
-        <li><a href="#" id="review-link">Avis</a></li>
-        <li><a href="#" id="appointment-link">Rendez-vous</a></li>
-        <li><a href="#" id="quotation-link">Devis</a></li>
-        <li><a href="#" id="tag-link">Tags</a></li>
-    </ul>
-</aside>
-
-<!-- ------------------------------------------------------------------------------------- -->
 <!-- --------------------------------PARTIE PRINCIPALE(VIEW)------------------------------ -->
 <!-- ------------------------------------------------------------------------------------- -->
-<main class="container">
-
+<main class="dashboard-container" id="dashboard-container">
+    <section id="heading-section">
+        <div id="tagline-container">
+            <p id="tagline">
+                "When KodingCore taking control"
+            </p>
+        </div>
+    </section>
+    <h1>Dashboard</h1>
     <!-- --------------------------- -->
     <!-- ----SECTION DE RECHERCHE--- -->
     <!-- --------------------------- -->
@@ -45,4 +35,20 @@
     <!-- ------------------------------ -->
     <section id="add-edit-section"></section>
 </main>
+<!-- ------------------------------------------------------------------------------------- -->
+<!-- -------------------------PANNEAU GAUCHE DES LIENS DE CONTROLS------------------------ -->
+<!-- ------------------------------------------------------------------------------------- -->
+<aside id="left-aside">
+    <ul>
+        <li><a href="#" id="user-link">Utilisateurs</a></li>
+        <li><a href="#" id="info-link">Infos</a></li>
+        <li><a href="#" id="message-link">Messages</a></li>
+        <li><a href="#" id="template-link">Templates</a></li>
+        <li><a href="#" id="category-link">Catégories</a></li>
+        <li><a href="#" id="review-link">Avis</a></li>
+        <li><a href="#" id="appointment-link">Rendez-vous</a></li>
+        <li><a href="#" id="quotation-link">Devis</a></li>
+        <li><a href="#" id="tag-link">Tags</a></li>
+    </ul>
+</aside>
 <script type="module" src="assets/js/dashboard.js"></script>
