--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -6,7 +6,7 @@
     <?php
     }
 ?>
-<main class="container">
+<main class="register-container" id="register-container">
     <h1>Créer un compte</h1>
     <form action="index.php?route=register" method="POST" id="register_form">
         <fieldset>
