--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,4 +1,4 @@
-<main id="container" class="container">
+<main id="homepage-container" class="homepage-container">
     <section id="heading-section">
         <div id="tagline-container">
             <p id="tagline">
@@ -49,16 +49,16 @@
         </article>
     </section>
     <section id="reviews">
-        <h2>Certains avis</h2>
+        <h2>Avis clients</h2>
     </section>
-    <div id="aside-access">
-        <i class="fa-solid fa-caret-right" style="color: #ffffff;"></i>
-    </div>
-    <aside id="anchor-aside">
-        <ul>
-            <li><a href="#presentation">Présentation</a></li>
-            <li><a href="#news">Nouveautés</a></li>
-            <li><a href="#reviews">Avis-clients</a></li>
-        </ul>
-    </aside>
 </main>
+<!-- ------------------------------------------------------------------------------------- -->
+<!-- ------------------------PANNEAU GAUCHE LES ANCRES DE LA PAGE------------------------- -->
+<!-- ------------------------------------------------------------------------------------- -->
+<aside id="left-aside">
+    <ul>
+        <li><a href="#presentation">Présentation</a></li>
+        <li><a href="#news">Nouveautés</a></li>
+        <li><a href="#reviews">Avis-clients</a></li>
+    </ul>
+</aside>
