--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -14,7 +14,14 @@
         $info = $this->data["info"];
     }
 ?>
-<main class="container">
+<main class="account-container">
+    <section id="heading-section">
+        <div id="tagline-container">
+            <p id="tagline">
+                Gestion du compte. Les reglages, c'est ici!
+            </p>
+        </div>
+    </section>
     <h1>Mon compte</h1>
     <form action="index.php?route=account" method="POST" id="account_form">
         <fieldset>
