--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -7,7 +7,14 @@
         <?php
     }
 ?>
-<main class="container">
+<main class="contact-container" id="contact-container">
+    <section id="heading-section">
+        <div id="tagline-container">
+            <p id="tagline">
+                "Besoin d'aide? D'une demande? D'un renseignement?"
+            </p>
+        </div>
+    </section>
     <h1>Envoyer un message à l'administrateur</h1>
     <form action="index.php?route=contact" method="POST" id="contact_form">
         <fieldset>
