--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -7,7 +7,7 @@
         <?php
     }
 ?>
-<main class="container">
+<main class="login-container" id="login-container">
     <h1>Connexion</h1>
     <form action="index.php?route=login" method="POST" id="login_form">
         <fieldset>
