ajustement taille tableau dashboard, display or not aside btn

--- a/assets/styles/scss/views/_contact.scss
+++ b/assets/styles/scss/views/_contact.scss
@@ -1,3 +1,5 @@
+@import '../general/vars.scss';
+
 .contact-container
 {
   #heading-section
@@ -11,5 +13,9 @@
         color: $dark-blue;
       }
     }
+  }
+  #left-aside-access
+  {
+    display: none;
   }
 }
