--- a/views/user/_footer.phtml
+++ b/views/user/_footer.phtml
@@ -7,3 +7,10 @@
         <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
     </ul>
 </nav>
+<nav class="contact-foot">
+    <ul>
+        <li><a><i class="fa-brands fa-github" style="color: #ff9651;"></i>Github</a></li>
+        <li></li>
+        <li></li>
+    </ul>   
+</nav>
