--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -11,7 +11,7 @@
     <section id="heading-section">
         <div id="tagline-container">
             <p id="tagline">
-                "Besoin d'aide? D'une demande? D'un renseignement?"
+                Besoin d'aide où D'un renseignement? Une demande?
             </p>
         </div>
     </section>
@@ -21,7 +21,7 @@
             <label for="subject">Sujet</label>
             <input type="text" name="subject" id="subject" autocomplete="off" required minlength="4" maxlength="50">
         </fieldset>
-        <fieldset>
+        <fieldset class="textarea">
             <label for="content">Message</label>
             <textarea id="content" name="content" placeholder="Votre texte ici..." required minlength="10" maxlength="2048"></textarea>
         </fieldset>
