--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -9,7 +9,7 @@ html body {
 }
 html body header {
   min-height: 50px;
-  padding: 15px;
+  padding: 16px;
   display: flex;
   justify-content: space-between;
   background: linear-gradient(to left, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
@@ -35,6 +35,7 @@ html body header .navbar {
   height: auto;
   right: 0;
   text-align: center;
+  z-index: 1;
 }
 html body header .navbar #menu {
   display: none;
@@ -62,6 +63,9 @@ html body header .navbar #menu.active {
   display: flex;
   flex-direction: column;
 }
+html body #heading-section {
+  position: relative;
+}
 html body main {
   width: 90%;
   margin: 0 auto;
@@ -70,19 +74,84 @@ html body main #heading-section {
   height: 33vw;
   display: flex;
   justify-content: center;
+  text-align: center;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 html body main #heading-section #tagline-container {
   margin-top: 10%;
-  height: 4rem;
-  padding: 1rem;
+  height: 20%;
+  padding: 0.5rem;
   border-radius: 0 20px 0 20px;
 }
 html body main #heading-section #tagline-container #tagline {
   margin: 0;
   font-size: 3.5vw;
+}
+html body main form {
+  margin: 0 auto;
+  padding: 5px;
+  width: 260px;
+  background: linear-gradient(to bottom, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
+  border-radius: 0 16px 0 16px;
+}
+html body main form p {
+  color: white;
+  font-weight: bold;
+  margin-left: 16px;
+}
+html body main form fieldset {
+  margin-top: 5px;
+  border: none;
+}
+html body main form fieldset label {
+  color: white;
+  margin: 16px 10px 0 16px;
+}
+html body main form fieldset input {
+  width: 96%;
+  margin-top: 8px;
+  border-radius: 0 5px 0 5px;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+}
+html body main form fieldset textarea {
+  width: 96%;
+  height: 300px;
+  margin-top: 8px;
+  border-radius: 0 5px 0 5px;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+  border: solid 1px black;
+}
+html body main form fieldset.textarea {
+  height: 200px;
+}
+html body main form fieldset.textarea textarea {
+  height: 80%;
+}
+html body main form input[type*=submit] {
+  width: 164px;
+  margin: 0 calc(50% - 82px);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+  background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
+  border-radius: 0 5px 0 5px;
+  border: solid 1px black;
+  font-weight: bold;
+  color: rgb(47, 85, 151);
+}
+html body main form button {
+  width: 164px;
+  margin: 0 calc(50% - 82px);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+  background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
+  border-radius: 0 5px 0 5px;
+  border: solid 1px black;
+  font-weight: bold;
+  color: rgb(47, 85, 151);
 }
 html body #left-aside-access {
   width: 18px;
@@ -95,9 +164,13 @@ html body #left-aside-access {
   align-items: center;
   background: linear-gradient(to bottom right, rgb(47, 85, 151) 5%, rgb(143, 170, 220));
   border-radius: 0 5px 5px 0;
+  z-index: 1;
 }
 html body #left-aside-access:hover {
   cursor: pointer;
+}
+html body #left-aside-access.hidden {
+  display: none;
 }
 html body #left-aside {
   display: none;
@@ -140,47 +213,30 @@ html body [id*=error] {
   color: red;
   font-size: 1rem;
 }
-html body .hidden {
-  display: none;
+html body footer {
+  width: 100%;
+  height: 136px;
+  margin-top: 2rem;
+  display: block;
+  background: linear-gradient(to bottom, rgb(143, 170, 220) 10%, rgb(47, 85, 151));
+  display: flex;
 }
-html body .edit-btn {
-  height: 1.25rem;
-  width: 3.5rem;
-  margin-left: 0.75rem;
-  background-color: blue;
+html body footer nav {
+  width: 100%;
+  height: 100%;
+}
+html body footer nav ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+html body footer nav ul li {
+  margin-left: 1vw;
+}
+html body footer nav ul li a {
+  text-decoration: none;
   color: white;
-}
-html body .remove-btn {
-  height: 1.25rem;
-  width: 5rem;
-  margin-left: 0.75rem;
-  background-color: red;
-  color: white;
-}
-html body .edit-btn:hover {
-  background-color: rgb(56, 56, 107);
-}
-html body .remove-btn:hover {
-  background-color: rgb(131, 67, 67);
-}
-html body td {
-  padding-left: 0.5rem;
-  border-bottom: solid 1px black;
-}
-html body tr, html body td, html body th {
-  min-width: 7rem;
-  max-width: 10rem;
-  height: 1.25rem;
-  overflow: hidden;
-  white-space: nowrap;
-}
-html body .col-id {
-  min-width: 0;
-  max-width: 2.5rem;
-}
-html body .col-other {
-  min-width: 0;
-  max-width: 6rem;
 }
 
 html {
@@ -235,6 +291,79 @@ html #tagline {
 .dashboard-container #heading-section #tagline-container #tagline {
   color: rgb(47, 85, 151);
 }
+.dashboard-container #search-section {
+  display: flex;
+}
+.dashboard-container #search-section fieldset:first-child {
+  margin: 0 auto;
+  border-radius: 0 5px 0 5px;
+  border-color: rgb(47, 85, 151);
+  width: 30%;
+}
+.dashboard-container #search-section fieldset:last-child {
+  margin: 0 auto;
+  border-radius: 0 5px 0 5px;
+  border-color: rgb(47, 85, 151);
+  width: 70%;
+}
+.dashboard-container #control-section .add-btn {
+  width: 164px;
+  margin: 0 calc(50% - 82px);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+  background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
+  border-radius: 0 5px 0 5px;
+  border: solid 1px black;
+  font-weight: bold;
+  color: rgb(47, 85, 151);
+}
+.dashboard-container #control-section table {
+  margin: 0 auto;
+  max-width: 100%;
+  border-radius: 0 16px 0 16px;
+}
+.dashboard-container #control-section table td {
+  padding-left: 0.5rem;
+  border-bottom: solid 1px black;
+}
+.dashboard-container #control-section table tr, .dashboard-container #control-section table td, .dashboard-container #control-section table th {
+  min-width: 7rem;
+  max-width: 10rem;
+  height: 1.25rem;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.dashboard-container #control-section table .col-id {
+  min-width: 0;
+  max-width: 2.5rem;
+}
+.dashboard-container #control-section table .col-other {
+  min-width: 0;
+  max-width: 6rem;
+}
+.dashboard-container #control-section table .edit-btn {
+  height: 1.25rem;
+  width: 3rem;
+  margin-left: 0.75rem;
+  background-color: blue;
+  color: white;
+}
+.dashboard-container #control-section table .remove-btn {
+  height: 1.25rem;
+  width: 3rem;
+  margin-left: 0.75rem;
+  background-color: red;
+  color: white;
+}
+.dashboard-container #control-section table .edit-btn:hover {
+  background-color: rgb(56, 56, 107);
+  cursor: pointer;
+}
+.dashboard-container #control-section table .remove-btn:hover {
+  background-color: rgb(131, 67, 67);
+  cursor: pointer;
+}
 
 .contact-container #heading-section {
   background-image: url("../../images/backgrounds/contact-background.jpg");
@@ -244,4 +373,7 @@ html #tagline {
 }
 .contact-container #heading-section #tagline-container #tagline {
   color: rgb(47, 85, 151);
+}
+.contact-container #left-aside-access {
+  display: none;
 }/*# sourceMappingURL=main.css.map */
