--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -39,9 +39,13 @@
     <div id="left-aside-access">
         <i class="fa-solid fa-caret-right" style="color: #ffffff;"></i>
     </div>
-    <?php
-        require $this->template;
-        if(isset($_SESSION["user_id"], $_SESSION["role"])) //* Control des variables de sessions pour l'acces users et admin
+        <?php
+            require $this->template;
+        ?>
+    <footer>
+        <?php
+            
+            if(isset($_SESSION["user_id"], $_SESSION["role"])) //* Control des variables de sessions pour l'acces users et admin
             {
                 if($_SESSION["role"] === "admin") //* Accès admin
                 {
@@ -56,7 +60,8 @@
             {
                 require 'guest/_footer.phtml';
             }
-    ?>
+        ?>
+    </footer>
 </body>
 <script src="../assets/js/index.js"></script>
 </html>
