--- a/assets/styles/scss/general/_style.scss
+++ b/assets/styles/scss/general/_style.scss
@@ -6,6 +6,19 @@ html
 
   body
   {
+    .btn
+    {
+      width: $submit-width;
+      margin: $submit-margin;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      box-shadow: 3px 3px 3px 0px $light-blue;
+      background: linear-gradient(to bottom, $light-blue, white, $light-blue);
+      border-radius: 0 5px 0 5px;
+      border: solid 1px black;
+      font-weight: bold;
+      color: $dark-blue;
+    }
     margin: 0;
     padding: 0;
     header
@@ -165,20 +178,6 @@ html
           font-weight: bold;
           color: $dark-blue;
         }
-        button
-        {
-          width: $submit-width;
-          margin: $submit-margin;
-          margin-top: 1rem;
-          margin-bottom: 1rem;
-          box-shadow: 3px 3px 3px 0px $light-blue;
-          background: linear-gradient(to bottom, $light-blue, white, $light-blue);
-          border-radius: 0 5px 0 5px;
-          border: solid 1px black;
-          font-weight: bold;
-          color: $dark-blue;
-        }
-
       }
     }
     #left-aside-access
