--- a/assets/styles/scss/typo/_typographie.scss
+++ b/assets/styles/scss/typo/_typographie.scss
@@ -1,19 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+@import '../general/vars.scss';
+
+
 html{
+    font-size: 18px;
     font-family: 'Roboto', sans-serif;
     h1,h2,h3 
     {
         font-family: 'Kanit', sans-serif;
         font-style: normal;
         font-weight: 400;
+        color: $dark-blue;
     }
     #tagline 
     {
         font-family: 'Kanit', sans-serif;
         font-style: italic;
         font-weight: 200;
+    }
+    h1
+    {
+        margin-left: 2rem;
+        text-decoration: underline;
+        font-size: 2.25rem;
+    }
+    h2
+    {
+        font-size: 1.5rem;
+    }
+    h3
+    {
+        margin: 0.5rem auto;
+        font-size: 1.35rem;
+    }
+    h4  
+    {
+        font-size: 1.2rem;
     }
 }
 
