--- a/assets/styles/scss/views/_shop.scss
+++ b/assets/styles/scss/views/_shop.scss
@@ -14,4 +14,23 @@
       }
     }
   }
+  #templates-section
+  {
+    .cards
+    {
+      margin: 0 auto;
+      padding: 0.5rem;
+      border-radius: 0 20px 0 20px;
+      border: solid $dark-blue;
+      width: 75%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      p
+      {
+        text-align: center;
+      }
+    }
+  }
 }
