--- a/assets/styles/scss/views/_shop.scss
+++ b/assets/styles/scss/views/_shop.scss
@@ -18,12 +18,13 @@
   {
     .cards
     {
-      margin: 0 auto;
+      margin: 2rem auto;
       padding: 0.5rem;
       border-radius: 0 20px 0 20px;
       border: solid $dark-blue;
       width: 75%;
       display: flex;
+      background-color: white;
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
