--- a/assets/styles/scss/general/_style.scss
+++ b/assets/styles/scss/general/_style.scss
@@ -6,6 +6,10 @@ html
 
   body
   {
+    background-image: url("../../images/backgrounds/views-back.svg");
+    background-color: rgba(255,255,255,1);
+    background-size: cover;
+    background-position: center;
     .btn
     {
       width: $submit-width;
@@ -18,6 +22,16 @@ html
       border: solid 1px black;
       font-weight: bold;
       color: $dark-blue;
+    }
+    .btn:hover
+    {
+      cursor: pointer;
+    }
+    .btn:active
+    {
+      color: white;
+      box-shadow: 6px 6px 6px 0px $light-blue;
+      background: linear-gradient(to bottom, $dark-blue, $dark-blue, white);
     }
     margin: 0;
     padding: 0;
@@ -93,6 +107,7 @@ html
     }
     main
     {
+      
       width: 90%;
       margin: 0 auto;
       #heading-section
