--- a/views/user/shop.phtml
+++ b/views/user/shop.phtml
@@ -1,19 +1,3 @@
-<?php
-    if(isset($this->data["templates"]))
-    {
-        $templates = $this->data["templates"];
-        $tabCategories = [];
-        foreach($templates as $template)
-        {
-            if(!in_array($template->getCategoryId(), $tabCategories))
-            {
-                array_push($tabCategories, $template->getCategoryId());
-            }
-        }
-    }
-
-?>
-
 <main id="shop-container" class="shop-container">
     <section id="heading-section">
         <div id="tagline-container">
@@ -25,25 +9,38 @@
     <h1>Vitrine</h1>
     <section id="templates-section">
     <?php
-        if(isset($this->data["templates"]))
+    if(isset($this->data["templates"]) && isset($this->data["categories"]))
+    {
+        $templates = $this->data["templates"];
+        $categories = $this->data["categories"];
+        foreach($categories as $category)
         {
-            $templates = $this->data["templates"];
-            foreach($templates as $template)
-            {
-                ?>
-                <article class="cards">
-                    <h3><?=$template->getName();?></h3>
-                    <img width="250" src="<?=$template->getImagePath()?>" alt="Image du template proposé">
-                    <p><?=$template->getDescription();?></p>
-                    <? if(isset($_SESSION["user_id"]))
+            $category_name = $category->getName();
+            ?>
+            <section id="<?=$category_name?>-section">
+                <?php
+                foreach($templates as $template)
+                {
+                    if($template->getCategoryId() === $category->getCategoryId())
                     {
-                        ?> <button class="btn">Demander un devis</button> <?
+                        ?>
+                        <article class="cards">
+                            <h3><?=$template->getName();?></h3>
+                            <img width="250" src="<?=$template->getImagePath();?>" alt="Image du template proposé">
+                            <p><?=$template->getDescription();?></p>
+                            <button class="btn">Demander un devis</button>
+                        </article>
+                        <?php
                     }
-                ?></article><?php
-            }
+                }
+                ?>
+            </section>
+            <?php
         }
+    }
     ?>
-    </section>
+</section>
+
 </main>
 <aside id="left-aside">
     <ul>
